--- a/Cloudents.Spitball/App_Themes/site.css
+++ b/Cloudents.Spitball/App_Themes/site.css
@@ -1,4 +1,99 @@
-﻿body {
+﻿@font-face {
+  font-family: 'open_sansregular';
+  src: url('OpenSans-Regular-webfont.eot');
+  src: url('OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'), url('OpenSans-Regular-webfont.woff2') format('woff2'), url('OpenSans-Regular-webfont.woff') format('woff'), url('OpenSans-Regular-webfont.ttf') format('truetype'), url('OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+}
+/* ==========================================
+Single-colored icons can be modified like so:
+.icon-name {
+  font-size: 32px;
+  color: red;
+}
+========================================== */
+.icon-flash_2 {
+  width: 1.125em;
+}
+.icon-flashcard {
+  width: 1.25em;
+}
+.icon-jobs {
+  width: 0.4541015625em;
+}
+.icon-normal-logo {
+  width: 5em;
+}
+.icon-note {
+  left: 32%;
+  height: 1.2em;
+  width: 1em;
+}
+.icon-path {
+  width: 0.888671875em;
+}
+.icon-post {
+  /*width: 0.7998046875em;*/
+  width: 1.1em;
+  height: 1.1em;
+  left: 27%;
+}
+.icon-purchase {
+  width: 0.7998046875em;
+}
+.icon-shape {
+  width: 0.9521484375em;
+}
+.icon-small-logo {
+  width: 2.150390625em;
+}
+.icon-tutor-copy {
+  width: 1.3em;
+  height: 1.3em;
+  top: 20%;
+  left: 15%;
+}
+.icon-ask-copy {
+  width: 1.412109375em;
+}
+.icon-chat {
+  /*width: 1.125em;*/
+  width: 1.4em;
+}
+.icon-upload {
+  height: 1.1em;
+  width: 1.4em;
+}
+.icon-settings {
+  height: 1.2em;
+  width: 1.3em;
+}
+/* Text styles */
+.Text-Style {
+  font-family: OpenSans;
+  font-size: 20px;
+  letter-spacing: -0.4px;
+  text-align: left;
+  color: #07305a;
+}
+.Text-Style-2 {
+  font-family: OpenSans;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 1.14;
+  letter-spacing: -0.3px;
+  text-align: left;
+  color: #0455a8;
+}
+body {
   background: #eeeeee;
   margin: 0;
   /*.speech-input {
@@ -14,16 +109,40 @@
 }
 body header {
   width: 100%;
-  height: 2em;
+  height: 3em;
+  display: flex;
+  align-items: center;
   background: #3293f6;
+}
+body header div {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 1em 10em;
+}
+body header .logo {
+  margin-top: 5px;
 }
 body header #search {
   background: #0455a8;
   border-radius: 6px;
-  height: 37px;
+  color: white;
+  border: none;
+}
+@media (max-width: 1365px) {
+  body header #search span {
+    display: none;
+  }
 }
 body .upper {
   text-transform: uppercase;
+}
+body section {
+  margin: 1em 10em;
+}
+body aside {
+  position: fixed;
+  width: 150px;
 }
 body aside label {
   width: 59px;
@@ -55,7 +174,7 @@ body aside ul li span {
   margin-left: 1em;
   line-height: 38px;
 }
-body aside ul li img {
+body aside ul li svg {
   top: 25%;
   left: 20%;
   position: absolute;
@@ -77,15 +196,12 @@ body aside ul li .note {
   position: relative;
   background: #320161;
 }
-body aside ul li .note img {
-  left: 30%;
-}
 body aside ul li .flashcard {
   width: 38px;
   height: 38px;
   border-radius: 50%;
   position: relative;
-  background: #f14d4d;
+  background: #c30000;
 }
 body aside ul li .tutor {
   width: 38px;
