--- a/Cloudents.Spitball/Views/Home/Index.cshtml
+++ b/Cloudents.Spitball/Views/Home/Index.cshtml
@@ -13,13 +13,20 @@
 	</head>
 <body>
 <header>
+	<div>
 	<picture>
 		<source media="(min-width: 641px) and (max-width: 1365px)" srcset="~/App_Themes/Images/small-logo.svg">
-		<img src="~/App_Themes/Images/normal-logo.svg" alt="Space Needle">
+		<img class="logo" src="~/App_Themes/Images/normal-logo.svg" alt="logo"/>
 	</picture>
-	<input type="search" id="transcript" class="speech-input" />
+	<input type="checkbox"/>
+	<input type="search" id="transcript" class="speech-input"/>
 	<button id="mic" class="speech-icon" onclick="startDictation(event)">mic</button>
-	<button id="search" class="search"><img src="~/App_Themes/Images/search-icon.svg"><span class="capitalize">search</span></button>
+		<button id="search" class="search">
+			<svg class="icon icon-search-icon">
+				<use xlink:href="~/App_Themes/Images/icons.svg#icon-search-icon"></use>
+			</svg><span class="capitalize">search</span>
+		</button>
+	</div>
 	@*<img srcset="~/App_Themes/Images/normal-logo.svg 400w, ~/App_Themes/Images/small-logo.svg 400w" src="~/App_Themes/Images/normal-logo.svg"*@
 </header>
 @*<div class="grid">
@@ -27,49 +34,82 @@
 	<div>item 2</div>
 	<div>item 3</div>
 </div>*@
-<aside>
-	<label class="upper">search type</label>
-	<ul>
-		<li>
-			<div class="ask"><img src="~/App_Themes/Images/ask-copy.svg">
-			</div><span>ask</span></li>
-		<li>
-			<div class="note"><img src="~/App_Themes/Images/note.svg">
-			</div><span>notes</span></li>
-		<li>
-			<div class="flashcard"><img src="~/App_Themes/Images/flashcard.svg">
-			</div><span>flashcards</span></li>
-		<li>
-			<div class="tutor"><img src="~/App_Themes/Images/tutor-copy.svg">
-			</div><span>tutor</span></li>
-	</ul>
-	<label class="upper">contribute</label>
-	<ul>
-		<li>
-			<div class="ask"><img src="~/App_Themes/Images/ask-copy.svg">
-			</div><span>upload</span></li>
-		<li>
-			<div class="note"><img src="~/App_Themes/Images/note.svg">
-			</div><span>post</span></li>
-	</ul>
-	<label class="upper">class talk</label>
-	<ul>
-		<li>
-			<div class="ask"><img src="~/App_Themes/Images/ask-copy.svg">
-			</div><span>chat</span></li>
-	</ul>
-	<label class="upper">personal info</label>
-	<ul>
-		<li>
-			<div class="ask"><img src="~/App_Themes/Images/ask-copy.svg">
-			</div><span>settings</span></li>
-	</ul>
-</aside>
+	<section>
+		<aside>
+			<label class="upper">search type</label>
+			<ul>
+				<li>
+					<div class="ask">
+						<svg class="icon icon-ask-copy">
+							<use xlink:href="~/App_Themes/Images/icons.svg#icon-ask-copy"></use>
+						</svg>
+					</div><span>ask</span>
+				</li>
+				<li>
+					<div class="note">
+						<svg class="icon icon-note">
+							<use xlink:href="~/App_Themes/Images/icons.svg#icon-note"></use>
+						</svg>
+					</div><span>notes</span>
+				</li>
+				<li>
+					<div class="flashcard">
+						<svg class="icon icon-flashcard">
+							<use xlink:href="~/App_Themes/Images/icons.svg#icon-flashcard"></use>
+						</svg>
+					</div><span>flashcards</span>
+				</li>
+				<li>
+					<div class="tutor">
+						<svg class="icon icon-tutor-copy">
+							<use xlink:href="~/App_Themes/Images/icons.svg#icon-tutor-copy"></use>
+						</svg>
+					</div><span>tutor</span>
+				</li>
+			</ul>
+			<label class="upper">contribute</label>
+			<ul>
+				<li>
+					<div class="ask">
+						<img src="~/App_Themes/Images/icons.svg#icon-ask-copy">
+						<svg class="icon icon-upload">
+							<use xlink:href="~/App_Themes/Images/icons.svg#icon-upload"></use>
+						</svg>
+					</div><span>upload</span>
+				</li>
+				<li>
+					<div class="note">
+						<svg class="icon icon-post">
+							<use xlink:href="~/App_Themes/Images/icons.svg#icon-post"></use>
+						</svg>
+					</div><span>post</span>
+				</li>
+			</ul>
+			<label class="upper">class talk</label>
+			<ul>
+				<li>
+					<div class="ask">
+						<img src="~/App_Themes/Images/icons.svg#icon-ask-copy">
+						<svg class="icon icon-chat">
+							<use xlink:href="~/App_Themes/Images/icons.svg#icon-chat"></use>
+						</svg>
+					</div><span>chat</span>
+				</li>
+			</ul>
+			<label class="upper">personal info</label>
+			<ul>
+				<li>
+					<div class="ask">
+						<svg class="icon icon-settings">
+							<use xlink:href="~/App_Themes/Images/icons.svg#icon-settings"></use>
+						</svg>
+					</div><span>settings</span>
+				</li>
+			</ul>
+		</aside>
+	</section>
 <script>
 	function startDictation() {
-
-		if (window.hasOwnProperty('webkitSpeechRecognition')) {
-
 			var recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition || window.mozSpeechRecognition || window.msSpeechRecognition)();
 
 			recognition.continuous = false;
@@ -86,8 +126,6 @@
 			recognition.onerror = function(e) {
 				recognition.stop();
 			}
-
-		}
 	}
 </script>
 </body>
