--- a/Cloudents.Spitball/Views/Home/Index.cshtml
+++ b/Cloudents.Spitball/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 <head>
 	<meta name="viewport" content="width=device-width" />
     <title>Index</title>
-    @Styles.Render("~/My/Less");
+    @Styles.Render("~/My/Css");
     <script type = 'text/javascript' >
         var appInsights=window.appInsights||function(config)
         {
