--- a/Cloudents.Spitball/Views/Home/Index.cshtml
+++ b/Cloudents.Spitball/Views/Home/Index.cshtml
@@ -1,9 +1,38 @@
-﻿@using System.Web.Optimization
-
-@{
+﻿@{
     Layout = "_Layout.cshtml";
 }
 
 <div>
-	start my content
+	<h1>I’ve come to the conclusion that the answer is: 9 meters</h1>
+    <div grid>
+        <div inline-flex class="options" ng-init="filter='all'">
+            <input id="option1" type="radio" value="all" ng-model="filter" name="filter"><label for="option1">All</label>
+            <input id="option2" type="radio" value="class" ng-model="filter" name="filter"><label for="option2">From my Courses</label>
+            <input id="option3" type="radio" value="source" ng-model="filter" name="filter"><label for="option3">Selected sources</label>
+        </div>
+        <div class="options-val" inline-flex ng-show="filter != all">
+            @*<div class="class-list" ng-show="filter==classes" ng-repeat="class in MyClasses">*@
+            <div class="class-list" ng-show="filter=='class'" ng-repeat="(i,c) in ['c1','c2']">
+                <input id="class{{i}}" type="radio" ng-model="class" name="classes" value="{{c}}"><label for="class{{i}}">{{c}}</label>
+            </div>
+            <div class="source-list" ng-show="filter=='source'" ng-repeat="(i,s) in ['s1','s2']">
+                <input id="source{{i}}" type="radio" ng-model="source" name="sources" value="{{s}}"><label for="source{{i}}">{{s}}</label>
+            </div>
+            @*<div class="source-list" ng-show="filter==classes" ng-repeat="source in Sources">*@
+        </div>
+        <iframe width="100%" height="315"
+                src="https://www.youtube.com/embed/XGSy3_Czz8k"></iframe>
+        <div class="item-result">
+            <div class="image"></div>
+            <div class="item-content">
+                <div class="university"><div class="description">University of Michigan</div>
+                    <div class="university-class">Econ 102 / Introductory Microecono…</div></div>
+            <h2 class="Text-Style-2">Gen Chem Test 1 Study Guide</h2>
+                <div class="description">
+                    260261 Chemical Principles Fall 2015 Answer key to homework Assignment 3 Problem 1 30 pt Calculate the probability for an electron in the 2s state of 
+                </div>
+                </div>
+            <span class="source credit">Source:Quizlet</span>
+        </div>
+    </div>
 </div>
